Fixed Navbar overlapping due to wide searchbar. (#866)
#865

--- a/src/theme/SearchBar/style.css
+++ b/src/theme/SearchBar/style.css
@@ -21,7 +21,7 @@ div[data-ds-theme='dark']
 }
 
 /* Media Queries for specific width screen */
-@media only screen and (max-width: 1185px) {
+@media only screen and (max-width: 1400px) {
   .searchbox {
     width: 200px !important;
   }
